--- a/src/components/LargeContainer/LargeContainer.module.css
+++ b/src/components/LargeContainer/LargeContainer.module.css
@@ -2,6 +2,7 @@
   width: 1160px;
   margin: auto;
   max-width: 100%;
+  overflow: hidden;
 }
 
 .large-container--relative {
