--- a/src/components/SocialIcons/SocialIcons.module.css
+++ b/src/components/SocialIcons/SocialIcons.module.css
@@ -15,6 +15,12 @@
   justify-content: flex-start;
 }
 
+@media screen and (max-width: 400px) {
+  .social-icons__links {
+    flex-wrap: wrap;
+  }
+}
+
 .social-icons__link {
   height: 30px;
   width: 30px;
